--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,4 +249,6 @@
     <string name="received">Received</string>
     <string name="analytics">Analytics</string>
     <string name="settings">Settings</string>
+    <string name="unit">Unit</string>
+    <string name="stock_is_low_please_update_stock">stock is low please update stock</string>
 </resources>
