--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,7 +186,7 @@
     <string name="successfully_updated">Successfully Updated</string>
     <string name="payment_methods">Payment Methods</string>
     <string name="password">Password</string>
-    <string name="login">LOGIN</string>
+    <string name="login">Login</string>
     <string name="please_enter_password">Please enter password</string>
     <string name="logout">Logout</string>
     <string name="you_dont_have_permission_to_access_this_page">You don\'t have permission to access this page</string>
@@ -194,8 +194,8 @@
     <string name="want_to_logout_from_app">Want to logout from app ?</string>
     <string name="delete">DELETE</string>
     <string name="tax">Tax</string>
-    <string name="total_tax">Total Tax</string>
-    <string name="sub_total">Sub Total:</string>
+    <string name="total_tax">Total Tax: </string>
+    <string name="sub_total">Sub Total: </string>
     <string name="discount">Discount:</string>
     <string name="discount_cant_be_greater_than_total_price">Discount can\'t be greater than total price</string>
     <string name="net_sales">Net Sales</string>
@@ -251,4 +251,15 @@
     <string name="settings">Settings</string>
     <string name="unit">Unit</string>
     <string name="stock_is_low_please_update_stock">stock is low please update stock</string>
+    <string name="walk_in_customer">Walk In Customer</string>
+    <string name="balanced_due">Balanced Due</string>
+    <string name="cash">Cash</string>
+    <string name="card">Card</string>
+    <string name="upi">Upi</string>
+    <string name="credit_card">Credit Card</string>
+    <string name="save_small">Save</string>
+    <string name="preview_smal">Preview</string>
+    <string name="order_done_successful">Order Done Successful</string>
+    <string name="total_price_with_tax">Total Price With Tax: </string>
+    <string name="available_stock">Available Stock</string>
 </resources>
